--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Elizabeth Marston <liz.mars@pm.me>"]
 edition = "2018"
 
 [dependencies]
+wasm-bindgen = "0.2.69"
 js-sys = "0.3.46"
 web-sys = "0.3.46"
 
